---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text:
      content: "Welcome, "
      span:
        start: 0
        length: 9
  - Block:
      block_type: Standard
      name: if
      bits:
        - if
        - user.is_authenticated
      children:
        - Text:
            content: "\n    "
            span:
              start: 44
              length: 5
        - Variable:
            bits:
              - user
              - name
            filters:
              - name: title
                arguments: []
                span:
                  start: 54
                  length: 5
              - name: default
                arguments:
                  - "'Guest'"
                span:
                  start: 60
                  length: 15
            span:
              start: 47
              length: 31
        - Text:
            content: "\n    "
            span:
              start: 86
              length: 5
      span:
        start: 9
        length: 24
      tag_span:
        start: 9
        length: 24
  - Block:
      block_type: Standard
      name: for
      bits:
        - for
        - group
        - in
        - user.groups
      children:
        - Text:
            content: "\n        "
            span:
              start: 125
              length: 9
      span:
        start: 86
        length: 24
      tag_span:
        start: 86
        length: 24
  - Block:
      block_type: Standard
      name: if
      bits:
        - if
        - forloop.first
      children:
        - Text:
            content: (
            span:
              start: 147
              length: 1
      span:
        start: 125
        length: 16
      tag_span:
        start: 125
        length: 16
  - Block:
      block_type: Standalone
      name: endif
      bits:
        - endif
      children: ~
      span:
        start: 148
        length: 5
      tag_span:
        start: 148
        length: 5
  - Text:
      content: "\n        "
      span:
        start: 168
        length: 9
  - Variable:
      bits:
        - group
        - name
      filters: []
      span:
        start: 171
        length: 10
  - Text:
      content: "\n        "
      span:
        start: 193
        length: 9
  - Block:
      block_type: Standard
      name: if
      bits:
        - if
        - not
        - forloop.last
      children:
        - Text:
            content: ", "
            span:
              start: 218
              length: 2
      span:
        start: 193
        length: 19
      tag_span:
        start: 193
        length: 19
  - Block:
      block_type: Standalone
      name: endif
      bits:
        - endif
      children: ~
      span:
        start: 220
        length: 5
      tag_span:
        start: 220
        length: 5
  - Text:
      content: "\n        "
      span:
        start: 240
        length: 9
  - Block:
      block_type: Standard
      name: if
      bits:
        - if
        - forloop.last
      children:
        - Text:
            content: )
            span:
              start: 261
              length: 1
      span:
        start: 240
        length: 15
      tag_span:
        start: 240
        length: 15
  - Block:
      block_type: Standalone
      name: endif
      bits:
        - endif
      children: ~
      span:
        start: 262
        length: 5
      tag_span:
        start: 262
        length: 5
  - Text:
      content: "\n    "
      span:
        start: 278
        length: 5
  - Block:
      block_type: Standalone
      name: empty
      bits:
        - empty
      children: ~
      span:
        start: 278
        length: 5
      tag_span:
        start: 278
        length: 5
  - Text:
      content: "\n        (no groups)\n    "
      span:
        start: 298
        length: 25
  - Block:
      block_type: Standalone
      name: endfor
      bits:
        - endfor
      children: ~
      span:
        start: 314
        length: 6
      tag_span:
        start: 314
        length: 6
  - Text:
      content: "\n"
      span:
        start: 327
        length: 1
  - Block:
      block_type: Standalone
      name: else
      bits:
        - else
      children: ~
      span:
        start: 327
        length: 4
      tag_span:
        start: 327
        length: 4
  - Text:
      content: "\n    Guest\n"
      span:
        start: 342
        length: 11
  - Block:
      block_type: Standalone
      name: endif
      bits:
        - endif
      children: ~
      span:
        start: 348
        length: 5
      tag_span:
        start: 348
        length: 5
  - Text:
      content: "!"
      span:
        start: 359
        length: 1
line_offsets:
  - 0
  - 40
  - 82
  - 117
  - 160
  - 185
  - 232
  - 274
  - 290
  - 310
  - 327
  - 338
  - 348
errors: []
